# ScienceDirectScrape

./: .gitignore  pyproject.toml
src/: sciencedirect_scrape_selenium.py
