[tool.poetry]
name = "sciencedirectscrape"
version = "0.1.0"
description = "A small utility to enumerate and download Science Direct articles for analysis"
authors = ["saiajaym"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pylint = "^2.7.2"
black = "^20.8b1"
flake8 = "^3.9.0"
flake8-black = "^0.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
